--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -1,1 +1,12 @@
-menuFile = Файл
+# Меню
+file=Файл
+edit=Редактировать
+help=Помощь и справка
+open=Открыть
+close=Закрыть
+create=Создать
+# Панели
+pseudoSection=Псевдо-разрез
+geoSection=Геоэлектрический разрез
+ves=Кривые ВЭЗ
+modelTable=Таблица модели
