Tab Pane added for Experimental Data table

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -11,3 +11,4 @@ geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
 modelTable=Таблица модели
 inaccuracy=Погрешность
+experimentalTable=Таблица полевых данных
