--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -10,5 +10,5 @@ pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
 modelTable=Таблица модели
-inaccuracy=Погрешность
+inaccuracy=Отклонение
 experimentalTable=Таблица полевых данных
