--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -12,3 +12,7 @@ ves=Кривые ВЭЗ
 modelTable=Таблица модели
 inaccuracy=Отклонение
 experimentalTable=Таблица полевых данных
+# Таблица экспериментальных данных
+experimentalAB_2=AB/2
+experimentalResistance=ρ каж.
+experimentalResistanceError=ρ каж. погр.
