--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -14,5 +14,5 @@ inaccuracy=Отклонение
 experimentalTable=Таблица полевых данных
 # Таблица экспериментальных данных
 experimentalAB_2=AB/2
-experimentalResistance=ρ каж.
-experimentalResistanceError=ρ каж. погр.
+experimentalResistanceApparent=ρ каж.
+experimentalErrorResistanceApparent=ρ каж. погр.
