Добавил вывод в табличку модели, но она все еще неизменяемая. Вынес вывод графиков в отдельные методы и изменил вывод имен файлов на внутреннюю панель с графиками.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -14,5 +14,12 @@ inaccuracy=Отклонение
 experimentalTable=Таблица полевых данных
 # Таблица экспериментальных данных
 experimentalAB_2=AB/2
+experimentalMN_2=MN/2
 experimentalResistanceApparent=ρ каж.
+experimentalAmperage=Ток
+experimentalVoltage=Напряжение
 experimentalErrorResistanceApparent=ρ каж. погр.
+# Таблица экспериментальных данных
+modelPower=Мощность слоя
+modelResistanceApparent=ρ каж.
+modelPolarization=Поляризация
