Refactor + adjustments in names (units of measure added in brackets)

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -9,17 +9,17 @@ create=Создать
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
-modelTable=Таблица модели
+modelTable=Модель
 inaccuracy=Отклонение
-experimentalTable=Таблица полевых данных
+experimentalTable=Полевые данные
 # Таблица экспериментальных данных
-experimentalAB_2=AB/2
-experimentalMN_2=MN/2
-experimentalResistanceApparent=ρ каж.
-experimentalAmperage=Ток
-experimentalVoltage=Напряжение
-experimentalErrorResistanceApparent=ρ каж. погр.
+experimentalAB_2=AB/2 (m)
+experimentalMN_2=MN/2 (m)
+experimentalResistanceApparent=Кажущееся сопротивление ρₐ (Ohm‧m)
+experimentalAmperage=Ток (мА)
+experimentalVoltage=Напряжение (мВ)
+experimentalErrorResistanceApparent=Погрешность ρₐ (%)
 # Таблица экспериментальных данных
-modelPower=Мощность слоя
-modelResistanceApparent=ρ каж.
-modelPolarization=Поляризация
+modelPower=Мощность слоя (m)
+modelResistanceApparent=Сопротивление ρ (Ohm‧m)
+modelPolarization=Поляризация (%)
