Тотальный рефактор. Теперь архитектура проекта соответствует MVVM-паттерну разработки. Классы и интерфейсы, которые следует наследовать при добавлении компонентов во избежании ошибок и дублирования кода представлены в пакете 'mvvm'. Часть функционала перенесена, часть - нет. Добавлена первая версия стартового экрана. Классы, не относящиеся к проекту(наработки без MVVM-паттерна) помещены суффиксом '_old'.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -10,7 +10,7 @@ pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
 modelTable=Модель
-inaccuracy=Отклонение
+misfit=Отклонение
 experimentalTable=Полевые данные
 # Таблица экспериментальных данных
 experimentalAB_2=AB/2 (m)
