Added Show/hide VES chart legend menu option

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -23,3 +23,5 @@ experimentalErrorResistanceApparent=Погрешность ρₐ (%)
 modelPower=Мощность слоя (m)
 modelResistanceApparent=Сопротивление ρ (Ohm‧m)
 modelPolarization=Поляризация (%)
+view=Вид
+legend=Легенды графиков
