Всякие недоделки. Чтобы на ноут слить.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -10,10 +10,9 @@ create=Создать
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
-modelTable=Модель
 misfit=Отклонение
+#Таблица экспериментальных данных
 experimentalTable=Полевые данные
-# Таблица экспериментальных данных
 experimentalAB_2=AB/2 (m)
 experimentalMN_2=MN/2 (m)
 experimentalResistanceApparent=Кажущееся сопротивление ρₐ (Ohm‧m)
@@ -21,8 +20,10 @@ experimentalAmperage=Ток (мА)
 experimentalVoltage=Напряжение (мВ)
 experimentalErrorResistanceApparent=Погрешность ρₐ (%)
 # Таблица экспериментальных данных
+modelTable=Модель
 modelPower=Мощность слоя (m)
 modelResistanceApparent=Сопротивление ρ (Ohm‧m)
 modelPolarization=Поляризация (%)
+#Прочее
 view=Вид
 legend=Легенды графиков
