Choose MOD file right after EXP file opened

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -6,6 +6,9 @@ help=Помощь и справка
 open=Открыть
 close=Закрыть
 create=Создать
+askImportOption=Добавить пикет к текущему разрезу или создать новый?
+addToNew=Создать новый разрез
+addToCurrent=Добавить к текущему разрезу
 # Панели
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
