VESCurves navigation update GUI, added navigation with Ctrl+Arrows and Ctrl+/Ctrl- to zoom in/out

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -29,3 +29,9 @@ modelResistanceApparent=Сопротивление ρ (Ohm‧m)
 modelPolarization=Поляризация (%)
 view=Вид
 legend=Легенды графиков
+zoomIn=+
+zoomOut=-
+left=←
+right=→
+up=↑
+down=↓
