--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -7,7 +7,7 @@ open=Открыть
 close=Закрыть
 create=Создать
 askImportOption=Добавить пикет к текущему разрезу или создать новый?
-addToNew=Создать новый разрез
+addToNew=Создать новый разрез (в новом окне)
 addToCurrent=Добавить к текущему разрезу
 # Панели
 pseudoSection=Псевдо-разрез
