--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -37,3 +37,8 @@ up=↑
 down=↓
 inverse=Обратная задача
 cancel=Отмена
+importOptions=Опции иморта
+welcomeToGem=Добро пожаловать в GEM
+welcomeText=Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ
+openEXPFile=Открыть EXP-файл
+useSystemMenu=Использовать системное меню
