--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -37,8 +37,16 @@ up=↑
 down=↓
 inverse=Обратная задача
 cancel=Отмена
-importOptions=Опции иморта
+importOptions=Опции импорта
 welcomeToGem=Добро пожаловать в GEM
 welcomeText=Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ
 openEXPFile=Открыть EXP-файл
 useSystemMenu=Использовать системное меню
+unableToDrawChart=Невозможно отрисовать график
+noLib=Отсутствует библиотека
+fileError=Произошла ошибка при открытии файла
+error=Ошибка
+compatibilityMode=Режим совместимости
+EXPSTTMismatch=STT и EXP содержат разное количество строк
+minimalDataWillBeDisplayed=Будет отображено минимальное возможное количество данных
+fileNotFound=Файл не найден!
