Multi-picket mode added

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -50,3 +50,4 @@ compatibilityMode=Режим совместимости
 EXPSTTMismatch=STT и EXP содержат разное количество строк
 minimalDataWillBeDisplayed=Будет отображено минимальное возможное количество данных
 fileNotFound=Файл не найден!
+picket=Пикет
