Updates in controller and charts

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -10,6 +10,11 @@ newWindow=Новый разрез (в новом окне)
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
+expCurve=Экспериментальная кривая
+expCurveUpper=Верхняя граница погрешности
+expCurveLower=Нижняя граница погрешности
+theorCurve=Теоретическая кривая
+modCurve=График модели
 modelTable=Модель
 misfit=Отклонение
 experimentalTable=Полевые данные
