Почти сделал отображение разреза через StackedBarChart. Есть пара ошибок, которые не дают это сделать.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -57,3 +57,6 @@ about=О программе
 section=Разрез
 openSection=Открыть разрез (JSON)
 newModel=Создать модель
+# Гео-разрез
+geoSectionX=Пикеты
+geoSectionY=Слои
