--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -2,6 +2,8 @@ version=Версия PREVIEW
 # Меню
 file=Файл
 edit=Редактировать
+undo=Отменить
+redo=Повторить
 help=Помощь и справка
 import=Импорт
 close=Закрыть
@@ -58,3 +60,5 @@ section=Разрез
 openSection=Открыть разрез (JSON)
 newModel=Создать модель
 export=Экспорт
+expData=Полевые данные
+modData=Данные модели
