Совмещаю файлы из своей ветки и main. Прошлая версия ветки настолько отличалась, что ничего не мерджилось.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -58,3 +58,6 @@ section=Разрез
 openSection=Открыть разрез (JSON)
 newModel=Создать модель
 export=Экспорт
+#geosection
+geoSectionX=Пикет
+geoSectionY=Слои
