--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -65,3 +65,6 @@ expData=Полевые данные
 modData=Данные модели
 saveAs=Сохранить как
 saveSectionAs=Сохранить разрез как
+# Разрез
+sectionX=Пикеты
+sectionY=Слои
