drag n drop file in no file screen

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -65,3 +65,4 @@ expData=Полевые данные
 modData=Данные модели
 saveAs=Сохранить как
 saveSectionAs=Сохранить разрез как
+drag=Или перетащите файл сюда
