recent files list in no file screen

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -66,3 +66,4 @@ modData=Данные модели
 saveAs=Сохранить как
 saveSectionAs=Сохранить разрез как
 drag=Или перетащите файл сюда
+recentFiles=Недавно открытые файлы
