--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -67,3 +67,4 @@ saveAs=Сохранить как
 saveSectionAs=Сохранить разрез как
 drag=Или перетащите файл сюда
 recentFiles=Недавно открытые файлы
+clear=Очистить
