--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -68,3 +68,6 @@ saveSectionAs=Сохранить разрез как
 drag=Или перетащите файл сюда
 recentFiles=Недавно открытые файлы
 clear=Очистить
+add=Добавить
+polarizationApp=Кажущаяся поляризация
+errorPolApp=Погрешность кажущ. поляризации
