--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -28,7 +28,7 @@ experimentalAmperage=Ток (мА)
 experimentalVoltage=Напряжение (мВ)
 experimentalErrorResistanceApparent=Погрешность ρₐ (%)
 # Таблица экспериментальных данных
-modelPower=Мощность слоя (m)
+modelPower=Мощность (m)
 modelResistanceApparent=Сопротивление ρ (Ohm‧m)
 modelPolarization=Поляризация (%)
 view=Вид
@@ -71,3 +71,4 @@ clear=Очистить
 add=Добавить
 polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
+offset=Смещение
