Changeable name + some updates

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -71,4 +71,4 @@ clear=Очистить
 add=Добавить
 polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
-offset=Смещение
+offset=Расстояние от предыдущего пикета
