--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -7,7 +7,8 @@ redo=Повторить
 help=Помощь и справка
 import=Импорт
 close=Закрыть
-newWindow=Новый разрез (в новом окне)
+newWindow=Новое окно
+newSection=Создать разрез
 # Панели
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
@@ -72,3 +73,4 @@ add=Добавить
 polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
 offset=Расстояние от предыдущего пикета
+addPicket=Новый пикет
