--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -74,3 +74,6 @@ polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
 offset=Расстояние от предыдущего пикета
 addPicket=Новый пикет
+//Color Palette
+paletteMinRes=Минимальное\nсопротивление
+paletteMaxRes=Максимальное\nсопротивление
