Цвета разреза теперь изменяются в зависимости от минимального и максимального сопротивления. Палитра отображается некорректно, т.к при инициализации ширина и высота palettePane равны 0. Отображение градиента пока недоделал. Нашел баг - при нажатии "обратная задача" при отсутствии загруженных экспериментальных данных программа вылетает из-за ошибки в forwardsolver.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -77,3 +77,4 @@ addPicket=Новый пикет
 //Color Palette
 paletteMinRes=Минимальное\nсопротивление
 paletteMaxRes=Максимальное\nсопротивление
+paletteLabel=Палитра
