Добавил изменение детальности палитры, но еще не доделал. Поправил некоторые баги. Сделал дизайн как можно более адекватным.

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -78,3 +78,4 @@ addPicket=Новый пикет
 paletteMinRes=Минимальное\nсопротивление
 paletteMaxRes=Максимальное\nсопротивление
 paletteLabel=Палитра
+palettePrecision=Детальность
