--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -75,7 +75,7 @@ errorPolApp=Погрешность кажущ. поляризации
 offset=Расстояние от предыдущего пикета
 addPicket=Новый пикет
 //Color Palette
-paletteMinRes=Минимальное\nсопротивление
-paletteMaxRes=Максимальное\nсопротивление
+paletteMinRes=Мин.сопротивление
+paletteMaxRes=Макс.сопротивление
 paletteLabel=Палитра
-palettePrecision=Детальность
+palettePrecision=Детализация
