--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -24,13 +24,13 @@ experimentalTable=Полевые данные
 # Таблица экспериментальных данных
 experimentalAB_2=AB/2 (m)
 experimentalMN_2=MN/2 (m)
-experimentalResistanceApparent=Кажущееся сопротивление ρₐ (Ohm‧m)
+experimentalResistanceApparent=Кажущееся сопротивление ρₐ (Ω‧m)
 experimentalAmperage=Ток (мА)
 experimentalVoltage=Напряжение (мВ)
 experimentalErrorResistanceApparent=Погрешность ρₐ (%)
 # Таблица экспериментальных данных
 modelPower=Мощность (m)
-modelResistanceApparent=Сопротивление ρ (Ohm‧m)
+modelResistanceApparent=Сопротивление ρ (Ω‧m)
 modelPolarization=Поляризация (%)
 view=Вид
 legend=Легенды графиков
