таблицы: названия + тултипы на колонках

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -22,16 +22,25 @@ modelTable=Модель
 misfit=Отклонение
 experimentalTable=Полевые данные
 # Таблица экспериментальных данных
-experimentalAB_2=AB/2 (m)
-experimentalMN_2=MN/2 (m)
-experimentalResistanceApparent=Кажущееся сопротивление ρₐ (Ω‧m)
-experimentalAmperage=Ток (мА)
-experimentalVoltage=Напряжение (мВ)
-experimentalErrorResistanceApparent=Погрешность ρₐ (%)
+ab2=AB/2 [m]
+ab2Full=Разносы AB/2 [метр]
+mn2=MN/2 [m]
+mn2Full=Разносы MN/2 [метр]
+resistanceApparentFull=Кажущееся сопротивление ρₐ [Ом‧метр]
+resistanceApparent=ρₐ [Ω‧m]
+amperage=I [mА]
+amperageFull=Ток I [миллиампер]
+voltage=U [mV]
+voltageFull=Напряжение U [милливольт]
+errorResistanceApparent=δρₐ [%]
+errorResistanceApparentFull=Погрешность кажущегося сопротивления [процент]
 # Таблица экспериментальных данных
-modelPower=Мощность (m)
-modelResistanceApparent=Сопротивление ρ (Ω‧m)
-modelPolarization=Поляризация (%)
+power=H [m]
+powerFull=Мощность H [метр]
+resistance=ρ [Ω‧m]
+resistanceFull=Сопротивление ρ [Ом‧метр]
+z=z [m]
+zFull=Глубина z [метр]
 view=Вид
 legend=Легенды графиков
 zoomIn=+
