--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -42,6 +42,7 @@ resistanceFull=Сопротивление ρ [Ом‧метр]
 z=Z [m]
 zFull=Глубина z [метр]
 x=X [m]
+effectivePoints=Данные, используемые для решения обратной задачи
 view=Вид
 legend=Легенды графиков
 zoomIn=+
