поддержка вставки из буффера

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -90,3 +90,4 @@ paletteMinRes=Мин.сопротивление
 paletteMaxRes=Макс.сопротивление
 paletteLabel=Палитра
 palettePrecision=Детализация
+pasteFromClipboard=Вставить из буфера обмена
