график вэз легенда

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -19,6 +19,7 @@ expCurveLower=Нижняя граница погрешности
 theorCurve=Теоретическая кривая
 modCurve=График модели
 modelTable=Модель
+hiddenPoints=Отключенные точки
 misfit=Отклонение
 experimentalTable=Полевые данные
 # Таблица экспериментальных данных
@@ -85,7 +86,7 @@ polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
 offset=Расстояние от предыдущего пикета
 addPicket=Новый пикет
-//Color Palette
+//Color=Palette
 paletteMinRes=Мин.сопротивление
 paletteMaxRes=Макс.сопротивление
 paletteLabel=Палитра
