отключение подписи графиков

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -92,3 +92,4 @@ paletteMaxRes=Макс.сопротивление
 paletteLabel=Палитра
 palettePrecision=Детализация
 pasteFromClipboard=Вставить из буфера обмена
+graphTitles=Подписи графиков
