--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -13,6 +13,7 @@ newSection=Создать разрез
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
 ves=Кривые ВЭЗ
+vesLegend=Кривые ВЭЗ - легенда
 expCurve=Экспериментальная кривая
 expCurveUpper=Верхняя граница погрешности
 expCurveLower=Нижняя граница погрешности
