разрез в отдельном окне

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -94,3 +94,4 @@ paletteLabel=Палитра
 palettePrecision=Детализация
 pasteFromClipboard=Вставить из буфера обмена
 graphTitles=Подписи графиков
+sectionInSeparateWindow=Разрез в отдельном окне
