без графика, работает

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -95,3 +95,4 @@ palettePrecision=Детализация
 pasteFromClipboard=Вставить из буфера обмена
 graphTitles=Подписи графиков
 sectionInSeparateWindow=Разрез в отдельном окне
+kFull=Геометрический коэффициент
