--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -30,6 +30,7 @@ mn2=MN/2 [m]
 mn2Full=Разносы MN/2 [метр]
 resistanceApparentFull=Кажущееся сопротивление ρₐ [Ом‧метр]
 resistanceApparent=ρₐ [Ω‧m]
+resistanceApparentAvg=avg ρₐ [Ω‧m]
 amperage=I [mА]
 amperageFull=Ток I [миллиампер]
 voltage=U [mV]
