mathves upd macos + authors

--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -97,3 +97,4 @@ pasteFromClipboard=Вставить из буфера обмена
 graphTitles=Подписи графиков
 sectionInSeparateWindow=Разрез в отдельном окне
 kFull=Геометрический коэффициент
+authors=Авторы
