--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -98,3 +98,4 @@ graphTitles=Подписи графиков
 sectionInSeparateWindow=Разрез в отдельном окне
 kFull=Геометрический коэффициент
 authors=Авторы
+normalization=Нормализация
