--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -99,3 +99,4 @@ sectionInSeparateWindow=Разрез в отдельном окне
 kFull=Геометрический коэффициент
 authors=Авторы
 normalization=Нормализация
+additive=δₐ (add) [(Ω‧m)⁻¹]
