--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -88,9 +88,9 @@ polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
 offset=Расстояние от предыдущего пикета
 addPicket=Новый пикет
-//Color=Palette
-paletteMinRes=Мин.сопротивление
-paletteMaxRes=Макс.сопротивление
+# Color Palette
+paletteMinRes=Мин. сопротивление
+paletteMaxRes=Макс. сопротивление
 paletteLabel=Палитра
 palettePrecision=Детализация
 pasteFromClipboard=Вставить из буфера обмена
@@ -100,3 +100,5 @@ kFull=Геометрический коэффициент
 authors=Авторы
 normalization=Нормализация
 additive=δₐ (add) [(Ω‧m)⁻¹]
+# Anisotropy
+a.point=Установка с анизотропией
