--- a/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI_ru.properties
@@ -102,3 +102,5 @@ normalization=Нормализация
 additive=δₐ (add) [(Ω‧m)⁻¹]
 # Anisotropy
 a.point=Установка с анизотропией
+openProject=Открыть проект
+saveProject=Сохранить проект
