Remove try/catch in drawing logic. Improve slf4j helper function. Some rename.

--- a/src/main/resources/ui_ru.properties
+++ b/src/main/resources/ui_ru.properties
@@ -61,10 +61,13 @@ noFileTitle=Добро пожаловать в GEM
 noFileText=Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ
 openEXPFile=Открыть EXP-файл
 useSystemMenu=Использовать системное меню
+# Erros
 unableToDrawChart=Невозможно отрисовать график
 noLib=Отсутствует библиотека
 fileError=Произошла ошибка при открытии файла
 error=Ошибка
+saveAndRestart=Сохраните важные данные и перезапустите программу
+
 compatibilityMode=Режим совместимости
 EXPSTTMismatch=STT и EXP содержат разное количество строк
 minimalDataWillBeDisplayed=Будет отображено минимальное возможное количество данных
