Data Model refactor. Add Mutable/ReadOnly Interfaces. - Improve AddExperimentalData screen with validation. - Improve Experimental Data and Model Tables with localized validation messages. - Fix CanvasRenderPolygonChart.kt - Add ObservablePicket, ObservableSection models

--- a/src/main/resources/ui_ru.properties
+++ b/src/main/resources/ui_ru.properties
@@ -10,6 +10,7 @@ import=Импорт
 close=Закрыть
 newWindow=Новое окно
 newSection=Создать разрез
+addSignal=Добавить измерение
 # Панели
 pseudoSection=Псевдо-разрез
 geoSection=Геоэлектрический разрез
@@ -26,9 +27,9 @@ misfit=Отклонение
 experimentalTable=Полевые данные
 # Таблица экспериментальных данных
 ab2=AB/2 [m]
-ab2Full=Разносы AB/2 [метр]
+ab2Full=Разнос AB/2 [метр]
 mn2=MN/2 [m]
-mn2Full=Разносы MN/2 [метр]
+mn2Full=Разнос MN/2 [метр]
 resistanceApparentFull=Кажущееся сопротивление ρₐ [Ом‧метр]
 resistanceApparent=ρₐ [Ω‧m]
 resistanceApparentAvg=avg ρₐ [Ω‧m]
@@ -38,7 +39,7 @@ voltage=U [mV]
 voltageFull=Напряжение U [милливольт]
 errorResistanceApparent=δρₐ [%]
 errorResistanceApparentFull=Погрешность кажущегося сопротивления [процент]
-# Таблица экспериментальных данных
+# Таблица модельных данных
 power=H [m]
 powerFull=Мощность H [метр]
 resistance=ρ [Ω‧m]
@@ -61,12 +62,21 @@ noFileTitle=Добро пожаловать в GEM
 noFileText=Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ
 openEXPFile=Открыть EXP-файл
 useSystemMenu=Использовать системное меню
-# Erros
+# Errors
 unableToDrawChart=Невозможно отрисовать график
 noLib=Отсутствует библиотека
 fileError=Произошла ошибка при открытии файла
 error=Ошибка
 saveAndRestart=Сохраните важные данные и перезапустите программу
+invalidInput=Введены неправильные данные
+invalid.exp.ab2=Разнос AB/2 [метр] должен быть больше нуля
+invalid.exp.mn2=Разнос MN/2 [метр] должен быть больше нуля
+invalid.exp.amperage=Сила тока I [миллиампер] должна быть больше нуля
+invalid.exp.voltage=Напряжение U [милливольт] должно быть больше нуля
+invalid.exp.resistivityApparent=Кажущееся сопротивление ρₐ [Ом‧метр] должно быть больше нуля
+invalid.exp.errorResistivityApparent=Погрешность кажущегося сопротивления [процент] должна быть в диапазоне 1-100
+invalid.model.resistivity=Сопротивление ρ [Ом‧метр] должно быть больше нуля
+invalid.model.power=Мощность H [метр] должна быть больше нуля
 
 compatibilityMode=Режим совместимости
 EXPSTTMismatch=STT и EXP содержат разное количество строк
