Refactor: Replace all "resistance" with "resistivity"

--- a/src/main/resources/ui_ru.properties
+++ b/src/main/resources/ui_ru.properties
@@ -30,20 +30,20 @@ ab2=AB/2 [m]
 ab2Full=Разнос AB/2 [метр]
 mn2=MN/2 [m]
 mn2Full=Разнос MN/2 [метр]
-resistanceApparentFull=Кажущееся сопротивление ρₐ [Ом‧метр]
-resistanceApparent=ρₐ [Ω‧m]
-resistanceApparentAvg=avg ρₐ [Ω‧m]
+resistivityApparentFull=Кажущееся сопротивление ρₐ [Ом‧метр]
+resistivityApparent=ρₐ [Ω‧m]
+resistivityApparentAvg=avg ρₐ [Ω‧m]
 amperage=I [mА]
 amperageFull=Ток I [миллиампер]
 voltage=U [mV]
 voltageFull=Напряжение U [милливольт]
-errorResistanceApparent=δρₐ [%]
-errorResistanceApparentFull=Погрешность кажущегося сопротивления [процент]
+errorResistivityApparent=δρₐ [%]
+errorResistivityApparentFull=Погрешность кажущегося сопротивления [процент]
 # Таблица модельных данных
 power=H [m]
 powerFull=Мощность H [метр]
-resistance=ρ [Ω‧m]
-resistanceFull=Сопротивление ρ [Ом‧метр]
+resistivity=ρ [Ω‧m]
+resistivityFull=Сопротивление ρ [Ом‧метр]
 z=Z [m]
 zFull=Глубина z [метр]
 x=X [m]
